- notification image size on mobiles fixes

--- a/apps/frontend/src/styles.scss
+++ b/apps/frontend/src/styles.scss
@@ -166,4 +166,12 @@ element.style {
     display: block !important;
     position: initial !important;
   }
+
+  .mat-snack-bar-container {
+    img {
+      max-height: 200px;
+      height: auto;
+      max-width: 100%;
+    }
+  }
 }
